# Controle

Zcontrole_2017/src/: CMakeLists.txt  prime-factors.c  prime-factors.h  prime-factors.inc  test-create_destroy.c  test-init-finish.c  test-prime_factores_get_number.c  test-toString.c  test-write.c
src/: CMakeLists.txt  CPPLINT.cfg  NomConfig.cmake.in  polygon.c  polygon.h  polygon.inc  test-append.c  test-copy_clone.c  test-create_destroy.c  test-init_finish.c  test-polygone.c  test-prepend.c  test-remove.c  test-to-string.c  test-toString.c  test-write.c
